[package]
name = "kvs"
version = "0.1.0"
edition = "2018"
authors = ["Yang Jiang jiangyang183@163.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
failure_derive = "0.1.5"
bson = "0.13.0"
serde_derive = "1.0.92"
serde = "1.0.92"
log = "0.4.6"
env_logger = "0.6.1"
ron = "*"
serde_json = "1.0.39"
simple_logger = "1.3.0"
sled = "0.34.6"
structopt = "0.2.15"
num_cpus = "1.10.0"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
crossbeam = "0.7.1"
rayon = "1.0.3"

[[bench]]
name = "engine_bench"
harness = false
